stops tabmenu from overlapping with header-right

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -32,11 +32,7 @@
 #header .tabmenu{
     position: absolute;
     bottom: 0;
-    right: 0;
     font-size: 1.2em;
-}
-
-#header .tabmenu li{
 }
 
 .tabmenu li a{
